--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 body {
-  background-color: #000;
-  color: #fff;}
+/*  background-color: #000;*/
+/*  color: #fff;*/
+}
 .App {
-  text-align: center;
+/*  text-align: center;*/
 }
 
 .App-logo {
