#8 Add start, stop button, .env

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,16 @@ body {
     transform: rotate(360deg);
   }
 }
+
+
+.price-color {
+  color: red;
+}
+
+.connected-color {
+  color: blue;
+}
+
+.blocknum-color {
+  color: green;
+}
